Update oraxen addon