@@ -11,9 +11,6 @@ import org.bukkit.event.Listener;
 import org.bukkit.inventory.ItemStack;
 
 public class OraxenItemAddon extends ItemAddon implements Listener {
-
-    private boolean oraxenLoaded = false;
-    
     @Override
     public String getPrefix() {
         return "oraxen";
@@ -31,16 +28,18 @@ public class OraxenItemAddon extends ItemAddon implements Listener {
 
     @Override
     public ItemStack getItemStack(String id) {
-        if (!oraxenLoaded) {
+        if (!OraxenItems.exists(id)) {
+            getLogger().warning(() -> "Oraxen item with id %s doesn't exist.".formatted(id));
             return null;
         }
-        
+
         final ItemBuilder item = OraxenItems.getItemById(id);
 
         if (item == null) {
-            getLogger().info(() -> String.format("Could not obtain Oraxen item %s", id));
+            getLogger().info(() -> "Could not obtain Oraxen item %s".formatted(id));
             return null;
         }
+
         return item.build();
     }
 
@@ -48,9 +47,7 @@ public class OraxenItemAddon extends ItemAddon implements Listener {
     public void onItemsLoad(OraxenItemsLoadedEvent event) {
         getLogger().info("Detected that Oraxen has finished loading all items...");
         getLogger().info("Reloading EMF.");
-        this.oraxenLoaded = true;
 
         EMFPlugin.getInstance().reload(null);
     }
-
 }
